--- a/admin.html
+++ b/admin.html
@@ -1,133 +1,204 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
-    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
-  </script>
   <script src="script.js" type="module"></script>
 </head>
 <body>
   <header class="site-header">
-    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
-      <div class="logo">
-        <a href="index.html"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></a>
+    <nav>
+      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="cart.html">Cart <span id="cart-count"></span></a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
       </div>
-      <div class="nav-links flex gap-4">
-        <a href="index.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Home</a>
-        <a href="products.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Products</a>
-        <a href="cart.html" class="px-3 py-2 rounded-lg hover:bg-gray-200 relative">
-          Cart <span id="cart-count" class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-2 py-1"></span>
-        </a>
-        <a href="status.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Order Status</a>
-        <span id="user-auth">
-          <a href="login.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Login</a>
-        </span>
-        <a href="admin.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Admin</a>
+      <div class="search-bar">
+        <input id="search-input" type="search" placeholder="Search products...">
+        <button id="search-btn">🔍</button>
       </div>
-      <form id="search-form" class="flex ml-4">
-        <input id="search-query" type="text" placeholder="Search products..." class="p-2 border border-r-0 rounded-l-lg focus:outline-none focus:border-blue-500">
-        <button type="submit" class="bg-blue-600 text-white p-2 rounded-r-lg">🔍</button>
-      </form>
     </nav>
   </header>
 
-  <main class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
-    <div id="login-panel" class="card">
-      <h2 class="text-2xl font-bold mb-4">Admin Login</h2>
-      <form id="login-form" class="form grid gap-4">
+  <main class="container">
+    <div id="login-panel" class="card" style="display: none;">
+      <h2>Admin Login</h2>
+      <form id="login-form" class="form">
         <div>
-          <label class="block font-medium">Email</label>
-          <input id="admin-email" type="email" class="w-full p-2 border rounded-lg" required>
+          <label>Email</label>
+          <input id="admin-email" type="email" required>
         </div>
         <div>
-          <label class="block font-medium">Password</label>
-          <input id="admin-pass" type="password" class="w-full p-2 border rounded-lg" required>
+          <label>Password</label>
+          <input id="admin-pass" type="password" required>
         </div>
-        <button type="submit" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700">Login</button>
+        <button type="submit">Login</button>
       </form>
     </div>
 
     <div id="admin-panel" class="card" style="display: none;">
-      <h2 class="text-2xl font-bold mb-4">Admin Dashboard</h2>
-      <h3 class="text-xl font-semibold mb-4">Add Product</h3>
-      <form id="add-product-form" class="form grid gap-4">
-        <div>
-          <label>Name</label>
-          <input id="product-name" required>
+      <div class="panel-header">
+        <h2>Admin Panel</h2>
+        <button onclick="logoutAdmin()">Logout</button>
+      </div>
+
+      <h2>Add Product</h2>
+      <form id="add-product-form" class="form">
+        <div class="row">
+          <div>
+            <label>Name</label>
+            <input id="add-name" required>
+          </div>
+          <div>
+            <label>Slug</label>
+            <input id="add-slug" required>
+          </div>
         </div>
-        <div>
-          <label>Price (tk)</label>
-          <input id="product-price" type="number" step="0.01" required>
+        <div class="row">
+          <div>
+            <label>Price (tk)</label>
+            <input id="add-price" required>
+          </div>
+          <div>
+            <label>Discount (tk)</label>
+            <input id="add-discount" value="0">
+          </div>
         </div>
-        <div>
-          <label>Discount (tk)</label>
-          <input id="product-discount" type="number" step="0.01">
+        <div class="row">
+          <div>
+            <label>Image URLs (comma separated)</label>
+            <input id="add-images" required>
+          </div>
+          <div>
+            <label>Category</label>
+            <select id="add-category" required>
+              <option value="new">New</option>
+              <option value="hot">Hot</option>
+              <option value="gadgets">Gadgets</option>
+              <option value="apparel">Apparel</option>
+              <option value="accessories">Accessories</option>
+              <option value="collectibles">Collectibles</option>
+            </select>
+          </div>
         </div>
-        <div>
-          <label>Stock</label>
-          <input id="product-stock" type="number" required>
+        <div class="row">
+          <div>
+            <label>Color</label>
+            <input id="add-color">
+          </div>
+          <div>
+            <label>Stock</label>
+            <input id="add-stock" type="number" value="0">
+          </div>
         </div>
-        <div>
-          <label>Availability</label>
-          <select id="product-availability" required>
-            <option value="In Stock">In Stock</option>
-            <option value="Pre Order">Pre Order</option>
-            <option value="Upcoming">Upcoming</option>
-          </select>
-        </div>
-        <div>
-          <label>Category</label>
-          <select id="product-category" required>
-            <option value="new">New</option>
-            <option value="hot">Hot</option>
-            <option value="preorder">Pre Order</option>
-            <option value="upcoming">Upcoming</option>
-          </select>
-        </div>
-        <div>
-          <label>Color</label>
-          <input id="product-color">
+        <div class="row">
+          <div>
+            <label>Availability</label>
+            <select id="add-availability" required>
+              <option value="Ready">Ready to Order</option>
+              <option value="Pre Order">Pre Order</option>
+              <option value="Upcoming">Upcoming</option>
+            </select>
+          </div>
         </div>
         <div>
           <label>Description</label>
-          <textarea id="product-desc"></textarea>
+          <textarea id="add-desc"></textarea>
         </div>
-        <div>
-          <label>Images (URLs, comma-separated)</label>
-          <input id="product-images">
-        </div>
-        <button type="submit" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700">Add Product</button>
+        <button type="submit">Add Product</button>
       </form>
-      <h3 class="text-xl font-semibold mt-6 mb-4">Products</h3>
-      <div id="data-table"></div>
-      <h3 class="text-xl font-semibold mt-6 mb-4">Orders</h3>
-      <div id="orders-table"></div>
+
+      <h2>Products</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Slug</th>
+              <th>Price</th>
+              <th>Category</th>
+              <th>Color</th>
+              <th>Discount (tk)</th>
+              <th>Stock</th>
+              <th>Availability</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="products-body"></tbody>
+        </table>
+      </div>
+
+      <h2>Orders</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Time</th>
+              <th>Product</th>
+              <th>Color</th>
+              <th>Qty</th>
+              <th>Delivery</th>
+              <th>Paid</th>
+              <th>Due</th>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Address</th>
+              <th>Payment</th>
+              <th>Txn ID</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody id="orders-body"></tbody>
+        </table>
+      </div>
     </div>
   </main>
-
-  <footer class="bg-gray-100 py-4 text-center text-sm">
-    <div class="flex justify-center gap-4 mb-2">
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank">
-        <img src="facebook.png" alt="Facebook" class="w-6 h-6">
-      </a>
-      <a href="https://www.instagram.com/thegeekshop.0" target="_blank">
-        <img src="instagram.png" alt="Instagram" class="w-6 h-6">
-      </a>
-      <a href="https://wa.me/01960788862" target="_blank">
-        <img src="whatsapp.png" alt="WhatsApp" class="w-6 h-6">
-      </a>
-    </div>
-    <p>&copy; All rights reserved by The Geek Shop</p>
-  </footer>
 </body>
 </html>
