--- a/products.html
+++ b/products.html
@@ -44,40 +44,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
   <script src="script.js" type="module"></script>
 </head>
 <body>
   <header class="site-header">
-    <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
-      <div class="logo">
-        <a href="index.html"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></a>
+    <nav>
+      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="products.html">Products</a>
+        <a href="cart.html">Cart <span id="cart-count"></span></a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
       </div>
-      <div class="nav-links flex gap-4">
-        <a href="index.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Home</a>
-        <a href="products.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Products</a>
-        <a href="cart.html" class="px-3 py-2 rounded-lg hover:bg-gray-200 relative">
-          Cart <span id="cart-count" class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-2 py-1"></span>
-        </a>
-        <a href="status.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Order Status</a>
-        <span id="user-auth">
-          <a href="login.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Login</a>
-        </span>
-        <a href="admin.html" class="px-3 py-2 rounded-lg hover:bg-gray-200">Admin</a>
+      <div class="search-bar">
+        <input id="search-input" type="search" placeholder="Search products...">
+        <button id="search-btn">🔍</button>
       </div>
-      <form id="search-form" class="flex ml-4">
-        <input id="search-query" type="text" placeholder="Search products..." class="p-2 border border-r-0 rounded-l-lg focus:outline-none focus:border-blue-500">
-        <button type="submit" class="bg-blue-600 text-white p-2 rounded-r-lg">🔍</button>
-      </form>
     </nav>
   </header>
 
-  <main class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
-    <h1 id="category-title" class="text-3xl font-bold mb-6">Products</h1>
-    <div id="category-products" class="product-list grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+  <main class="container">
+    <h1 id="products-title">Products</h1>
+    <div id="all-products" class="product-list"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
@@ -85,115 +74,6 @@
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <div id="checkout-modal" class="modal">
-    <div class="card modal-content">
-      <div class="modal-header">
-        <h2>Checkout</h2>
-        <button id="close-modal-btn">Close</button>
-      </div>
-      <form id="checkout-form" class="form">
-        <input type="hidden" id="co-product-id">
-        <div class="row">
-          <div>
-            <label>Product Name</label>
-            <input id="co-product-name" readonly>
-          </div>
-          <div>
-            <label>Color</label>
-            <input id="co-color" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Price (tk)</label>
-            <input id="co-price" readonly>
-            <input type="hidden" id="co-unit-price-raw">
-            <input type="hidden" id="co-available-stock">
-          </div>
-          <div>
-            <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Delivery</label>
-            <input id="co-delivery" readonly>
-          </div>
-          <div>
-            <label>Total (tk)</label>
-            <input id="co-total" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Name</label>
-            <input id="co-name" required>
-          </div>
-          <div>
-            <label>Phone</label>
-            <input id="co-phone" type="tel" required>
-          </div>
-        </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address" required></textarea>
-        </div>
-        <div class="row">
-          <div>
-            <label>Payment Method</label>
-            <select id="co-payment" required>
-              <option value="">Select</option>
-              <option value="Cash on Delivery">Cash on Delivery</option>
-              <option value="Bkash">Bkash</option>
-            </select>
-          </div>
-          <div>
-            <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div>
-            <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
-          </div>
-          <div>
-            <label>Due Amount (tk)</label>
-            <input id="co-due-amount" readonly>
-          </div>
-        </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy" required>
-            I agree to the <a href="status.html">Order Policy</a>
-          </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
-        </div>
-        <button id="place-order-btn" type="submit">Place Order</button>
-      </form>
-    </div>
-  </div>
-
-  <footer class="bg-gray-100 py-4 text-center text-sm">
-    <div class="flex justify-center gap-4 mb-2">
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank">
-        <img src="facebook.png" alt="Facebook" class="w-6 h-6">
-      </a>
-      <a href="https://www.instagram.com/thegeekshop.0" target="_blank">
-        <img src="instagram.png" alt="Instagram" class="w-6 h-6">
-      </a>
-      <a href="https://wa.me/01960788862" target="_blank">
-        <img src="whatsapp.png" alt="WhatsApp" class="w-6 h-6">
-      </a>
-    </div>
-    <p>&copy; All rights reserved by The Geek Shop</p>
-  </footer>
+  <footer>© All rights reserved by The Geek Shop</footer>
 </body>
 </html>
