--- a/admin.html
+++ b/admin.html
@@ -44,6 +44,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="script.js" type="module"></script>
 </head>
 <body>
@@ -116,11 +117,9 @@
           <div>
             <label>Category</label>
             <select id="add-category" required>
-              <option value="new">New</option>
-              <option value="hot">Hot</option>
-              <option value="gadgets">Gadgets</option>
-              <option value="apparel">Apparel</option>
-              <option value="accessories">Accessories</option>
+              <option value="keycaps">Keycaps</option>
+              <option value="keyboards">Keyboards and Bare Bones</option>
+              <option value="switches">Switches</option>
               <option value="collectibles">Collectibles</option>
             </select>
           </div>
@@ -158,6 +157,7 @@
           <thead>
             <tr>
               <th></th>
+              <th>Image</th>
               <th>Name</th>
               <th>Slug</th>
               <th>Price</th>
