--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Geek Shop</title>
+  <title>The Geek Shop - Home</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/babel-standalone@6.26.0/babel.min.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="script.js" type="module"></script>
 </head>
 <body>
@@ -54,30 +57,157 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
-        <a href="cart.html">Cart <span id="cart-count"></span></a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-      </div>
-      <div class="search-bar">
-        <input id="search-input" type="search" placeholder="Search products...">
-        <button id="search-btn">🔍</button>
       </div>
     </nav>
   </header>
 
   <main class="container">
-    <h2>May Interest You</h2>
-    <div id="interest-products" class="product-list new-hot-list"></div>
+    <section id="may-interest" class="my-8">
+      <h2 class="text-2xl font-semibold mb-4">May Interest You</h2>
+      <div class="relative overflow-hidden">
+        <div id="product-slider" class="flex transition-transform duration-500"></div>
+      </div>
+    </section>
 
-    <h2>Categories</h2>
-    <div id="category-cards" class="category-list"></div>
+    <section id="categories" class="my-8">
+      <h2 class="text-2xl font-semibold mb-4">Shop by Category</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+        <a href="products.html?category=new" class="card category-card p-4 text-center hover:shadow-lg transition-shadow">
+          <h3 class="text-lg font-medium">New Arrivals</h3>
+          <p class="muted">Discover the latest products</p>
+        </a>
+        <a href="products.html?category=hot" class="card category-card p-4 text-center hover:shadow-lg transition-shadow">
+          <h3 class="text-lg font-medium">Hot Deals</h3>
+          <p class="muted">Grab the best offers</p>
+        </a>
+        <a href="products.html?category=electronics" class="card category-card p-4 text-center hover:shadow-lg transition-shadow">
+          <h3 class="text-lg font-medium">Electronics</h3>
+          <p class="muted">Tech gadgets and more</p>
+        </a>
+        <a href="products.html?category=accessories" class="card category-card p-4 text-center hover:shadow-lg transition-shadow">
+          <h3 class="text-lg font-medium">Accessories</h3>
+          <p class="muted">Enhance your style</p>
+        </a>
+      </div>
+    </section>
   </main>
+
+  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
+    <div>
+      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
+        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+      </a>
+    </div>
+    <p>&copy; All rights reserved by The Geek Shop</p>
+  </footer>
 
   <div id="image-viewer" class="image-viewer">
     <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <footer>© All rights reserved by The Geek Shop</footer>
+  <div id="checkout-modal" class="modal">
+    <div class="card modal-content">
+      <div class="modal-header">
+        <h2>Checkout</h2>
+        <button id="close-modal-btn">Close</button>
+      </div>
+      <form id="checkout-form" class="form">
+        <input type="hidden" id="co-product-id">
+        <div class="row">
+          <div>
+            <label>Product Name</label>
+            <input id="co-product-name" readonly>
+          </div>
+          <div>
+            <label>Color</label>
+            <input id="co-color" readonly>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Price (tk)</label>
+            <input id="co-price" readonly>
+            <input type="hidden" id="co-unit-price-raw">
+            <input type="hidden" id="co-available-stock">
+          </div>
+          <div>
+            <label>Quantity</label>
+            <input id="co-qty" type="number" min="1" value="1">
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Delivery</label>
+            <input id="co-delivery" readonly>
+          </div>
+          <div>
+            <label>Total (tk)</label>
+            <input id="co-total" readonly>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Name</label>
+            <input id="co-name" required>
+          </div>
+          <div>
+            <label>Phone</label>
+            <input id="co-phone" type="tel" required>
+          </div>
+        </div>
+        <div>
+          <label>Address</label>
+          <textarea id="co-address" required></textarea>
+        </div>
+        <div class="row">
+          <div>
+            <label>Payment Method</label>
+            <select id="co-payment" required>
+              <option value="">Select</option>
+              <option value="Cash on Delivery">Cash on Delivery</option>
+              <option value="Bkash">Bkash</option>
+            </select>
+          </div>
+          <div>
+            <label>Pay to (Send money)</label>
+            <input id="co-payment-number" readonly>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Pay Now (tk)</label>
+            <input id="co-pay-now" readonly>
+          </div>
+          <div>
+            <label>Due Amount (tk)</label>
+            <input id="co-due-amount" readonly>
+          </div>
+        </div>
+        <div>
+          <label>Transaction ID</label>
+          <input id="co-txn">
+        </div>
+        <div>
+          <label>
+            <input type="checkbox" id="co-policy" required>
+            I agree to the <a href="status.html">Order Policy</a>
+          </label>
+        </div>
+        <div>
+          <p id="co-note" class="muted"></p>
+        </div>
+        <button id="place-order-btn" type="submit">Place Order</button>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
