--- a/product.html
+++ b/product.html
@@ -44,7 +44,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Details - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/babel-standalone@6.26.0/babel.min.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="script.js" type="module"></script>
 </head>
 <body>
@@ -54,20 +57,48 @@
       <div class="nav-links">
         <a href="index.html">Home</a>
         <a href="products.html">Products</a>
-        <a href="cart.html">Cart <span id="cart-count"></span></a>
         <a href="status.html">Order Status</a>
         <a href="admin.html">Admin</a>
-      </div>
-      <div class="search-bar">
-        <input id="search-input" type="search" placeholder="Search products...">
-        <button id="search-btn">🔍</button>
       </div>
     </nav>
   </header>
 
   <main class="container">
-    <div id="product-details" class="card product-details"></div>
+    <div id="product-details" class="card p-6">
+      <div class="flex flex-col md:flex-row gap-6">
+        <div class="flex-1">
+          <img id="product-main-image" class="w-full h-64 object-cover rounded-lg" src="" alt="">
+          <div id="product-images" class="flex gap-2 mt-4 flex-wrap"></div>
+        </div>
+        <div class="flex-1">
+          <h1 id="product-name" class="text-2xl font-bold"></h1>
+          <div id="product-badges" class="badges my-2"></div>
+          <p id="product-color" class="muted"></p>
+          <p id="product-price" class="price text-lg font-semibold"></p>
+          <p id="product-description" class="my-4"></p>
+          <div class="order-row">
+            <button id="order-btn" class="order-btn">Order</button>
+            <button id="preorder-btn" class="preorder-btn" style="display: none;">Pre Order</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
+
+  <footer style="background-color: #e8e8ff; padding: 20px; text-align: center; color: #000000; font-family: Arial, sans-serif;">
+    <div>
+      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
+        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+      </a>
+      <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
+      </a>
+    </div>
+    <p>&copy; All rights reserved by The Geek Shop</p>
+  </footer>
 
   <div id="image-viewer" class="image-viewer">
     <button id="close-viewer" class="close-viewer">&times;</button>
@@ -80,8 +111,30 @@
         <h2>Checkout</h2>
         <button id="close-modal-btn">Close</button>
       </div>
-      <div id="co-products-list"></div>
       <form id="checkout-form" class="form">
+        <input type="hidden" id="co-product-id">
+        <div class="row">
+          <div>
+            <label>Product Name</label>
+            <input id="co-product-name" readonly>
+          </div>
+          <div>
+            <label>Color</label>
+            <input id="co-color" readonly>
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <label>Price (tk)</label>
+            <input id="co-price" readonly>
+            <input type="hidden" id="co-unit-price-raw">
+            <input type="hidden" id="co-available-stock">
+          </div>
+          <div>
+            <label>Quantity</label>
+            <input id="co-qty" type="number" min="1" value="1">
+          </div>
+        </div>
         <div class="row">
           <div>
             <label>Delivery</label>
@@ -147,7 +200,5 @@
       </form>
     </div>
   </div>
-
-  <footer>© All rights reserved by The Geek Shop</footer>
 </body>
 </html>
